--- a/index.html
+++ b/index.html
@@ -26,113 +26,129 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="conatiner">
+    <div class="container">
       <header>
-        <nav>
-          <a href="./index.html" class="logo"
-            >Web<span class="logo-text-2">Studio</span></a
-          >
-          <ul>
-            <li class="list-logo">
-              <a href="./index.html" class="link-logo">Studio</a>
-            </li>
-            <li class="list-logo">
-              <a href="" class="link-logo">Portfolio</a>
-            </li>
-            <li class="list-logo">
-              <a href="" class="link-logo">Contacts</a>
-            </li>
-          </ul>
-        </nav>
-        <address class="contacts">
-          <ul>
-            <li>
-              <a href="mailto:info@devstudio.com" class="list-contacts"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a href="tel:+110001111111" class="list-contacts"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
+        <div class="container" class="container-header-1">
+          <nav class="nav-header">
+            <a href="./index.html" class="logo"
+              >Web<span class="logo-text-2">Studio</span></a
+            >
+            <ul>
+              <li class="list-logo">
+                <a href="./index.html" class="link-logo">Studio</a>
+              </li>
+              <li class="list-logo">
+                <a href="" class="link-logo">Portfolio</a>
+              </li>
+              <li class="list-logo">
+                <a href="" class="link-logo">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="contacts">
+            <ul>
+              <li>
+                <a href="mailto:info@devstudio.com" class="list-contacts"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+110001111111" class="list-contacts"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
       </header>
       <main>
         <section class="hero-image">
-          <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="hero-button">Order Service</button>
+          <div class="container">
+            <h1 class="hero-title">Effective Solutions for Your Business</h1>
+            <button type="button" class="hero-button">Order Service</button>
+          </div>
         </section>
         <section class="section-1">
-          <h2 class="section-name">Section 2</h2>
-          <ul>
-            <li class="list-section-1">
-              <h3 class="point-list">Strategy</h3>
-              <p class="paragraf-list">
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
-              </p>
-            </li>
-            <li class="list-section-1">
-              <h3 class="point-list">Punctuality</h3>
-              <p class="paragraf-list">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
-            </li>
-            <li class="list-section-1">
-              <h3 class="point-list">Diligence</h3>
-              <p class="paragraf-list">
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
-              </p>
-            </li>
-            <li class="list-section-1">
-              <h3 class="point-list">Technologies</h3>
-              <p class="paragraf-list">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
-            </li>
-          </ul>
+          <div class="container">
+            <h2 class="section-name">Section 2</h2>
+            <ul class="list-section-">
+              <li class="list-section-1">
+                <h3 class="point-list">Strategy</h3>
+                <p class="paragraf-list">
+                  Our goal is to identify the business problem to walk away with
+                  the perfect and creative solution.
+                </p>
+              </li>
+              <li class="list-section-1">
+                <h3 class="point-list">Punctuality</h3>
+                <p class="paragraf-list">
+                  Bring the key message to the brand's audience for the best
+                  price within the shortest possible time.
+                </p>
+              </li>
+              <li class="list-section-1">
+                <h3 class="point-list">Diligence</h3>
+                <p class="paragraf-list">
+                  Research and confirm brands that present the strongest digital
+                  growth opportunities and minimize risk.
+                </p>
+              </li>
+              <li class="list-section-1" class="list-section-2">
+                <h3 class="point-list">Technologies</h3>
+                <p class="paragraf-list">
+                  Design practice focused on digital experiences. We bring forth
+                  a deep passion for problem-solving.
+                </p>
+              </li>
+            </ul>
+          </div>
         </section>
         <section class="section-our-team">
-          <h2 class="our-section">Our Team</h2>
-          <ul>
-            <li class="list-section-team">
-              <img
-                src="./images/MarkGuerrero.jpg"
-                alt="Mark Guerrero"
-                width="264"
-              />
-              <h3 class="partner-team">Mark Guerrero</h3>
-              <p class="job-name">Product Designer</p>
-            </li>
-            <li class="list-section-team">
-              <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" />
-              <h3 class="partner-team">Tom Ford</h3>
-              <p class="job-name">Frontend Developer</p>
-            </li>
-            <li class="list-section-team">
-              <img
-                src="./images/CamilaGarcia.jpg"
-                alt="Camila Garcia"
-                width="264"
-              />
-              <h3 class="partner-team">Camila Garcia</h3>
-              <p class="job-name">Marketing</p>
-            </li>
-            <li class="list-section-team">
-              <img
-                src="./images/DanielWilson.jpg"
-                alt="Daniel Wilson"
-                width="264"
-              />
-              <h3 class="partner-team">Daniel Wilson</h3>
-              <p class="job-name">UI Designer</p>
-            </li>
-          </ul>
+          <div class="container">
+            <h2 class="our-section">Our Team</h2>
+            <ul class="list-section-our">
+              <li class="list-section-team">
+                <img
+                  src="./images/MarkGuerrero.jpg"
+                  alt="Mark Guerrero"
+                  width="264"
+                />
+                <div class="container-name-paragraf">
+                  <h3 class="partner-team">Mark Guerrero</h3>
+                  <p class="job-name">Product Designer</p>
+                </div>
+              </li>
+              <li class="list-section-team">
+                <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" />
+                <div class="container-name-paragraf">
+                  <h3 class="partner-team">Tom Ford</h3>
+                  <p class="job-name">Frontend Developer</p>
+                </div>
+              </li>
+              <li class="list-section-team">
+                <img
+                  src="./images/CamilaGarcia.jpg"
+                  alt="Camila Garcia"
+                  width="264"
+                />
+                <div class="container-name-paragraf">
+                  <h3 class="partner-team">Camila Garcia</h3>
+                  <p class="job-name">Marketing</p>
+                </div>
+              </li>
+              <li class="list-section-team" class="list-section-2">
+                <img
+                  src="./images/DanielWilson.jpg"
+                  alt="Daniel Wilson"
+                  width="264"
+                />
+                <div class="container-name-paragraf">
+                  <h3 class="partner-team">Daniel Wilson</h3>
+                  <p class="job-name">UI Designer</p>
+                </div>
+              </li>
+            </ul>
+          </div>
         </section>
         <section class="section-3">
           <h2 class="name-section">Our Portfolio</h2>
