--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a href="./index.html" class="logo"
               >Web<span class="logo-text-2">Studio</span></a
             >
-            <ul>
+            <ul class="list-header-logo">
               <li class="list-logo">
                 <a href="./index.html" class="link-logo">Studio</a>
               </li>
@@ -46,7 +46,7 @@
             </ul>
           </nav>
           <address class="contacts">
-            <ul>
+            <ul class="list-header-contacts">
               <li>
                 <a href="mailto:info@devstudio.com" class="list-contacts"
                   >info@devstudio.com</a
@@ -68,32 +68,32 @@
             <button type="button" class="hero-button">Order Service</button>
           </div>
         </section>
-        <section class="section-1">
+        <section class="section-no-name">
           <div class="container">
             <h2 class="section-name">Section 2</h2>
-            <ul class="list-section-">
-              <li class="list-section-1">
+            <ul class="list-section-no-name">
+              <li class="list-section-piont">
                 <h3 class="point-list">Strategy</h3>
                 <p class="paragraf-list">
                   Our goal is to identify the business problem to walk away with
                   the perfect and creative solution.
                 </p>
               </li>
-              <li class="list-section-1">
+              <li class="list-section-point">
                 <h3 class="point-list">Punctuality</h3>
                 <p class="paragraf-list">
                   Bring the key message to the brand's audience for the best
                   price within the shortest possible time.
                 </p>
               </li>
-              <li class="list-section-1">
+              <li class="list-section-piont">
                 <h3 class="point-list">Diligence</h3>
                 <p class="paragraf-list">
                   Research and confirm brands that present the strongest digital
                   growth opportunities and minimize risk.
                 </p>
               </li>
-              <li class="list-section-1" class="list-section-2">
+              <li class="list-section-piont" class="list-section-2">
                 <h3 class="point-list">Technologies</h3>
                 <p class="paragraf-list">
                   Design practice focused on digital experiences. We bring forth
@@ -150,80 +150,97 @@
             </ul>
           </div>
         </section>
-        <section class="section-3">
-          <h2 class="name-section">Our Portfolio</h2>
-          <ul>
-            <li class="list-our-1">
-              <img
-                class="our-image"
-                src="./images/banking-app.jpg"
-                alt="Banking App"
-                width="360"
-              />
-              <h3 class="piont-our">Banking App</h3>
-              <p class="paragraf-our">App</p>
-            </li>
-            <li class="list-our-1">
-              <img
-                class="our-image"
-                src="./images/cashless-payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-              />
-              <h3 class="piont-our">Cashless Payment</h3>
-              <p class="paragraf-our">Marketing</p>
-            </li>
-            <li class="list-our-1">
-              <img
-                class="our-image"
-                src="./images/meditation-app.jpg"
-                alt="Meditation App"
-                width="360"
-              />
-              <h3 class="piont-our">Meditation App</h3>
-              <p class="paragraf-our">App</p>
-            </li>
-            <li class="list-our-2">
-              <img
-                class="our-image"
-                src="./images/taxi-service.jpg"
-                alt="Taxi Service"
-                width="360"
-              />
-              <h3 class="piont-our">Taxi Service</h3>
-              <p class="paragraf-our">Marketing</p>
-            </li>
-            <li class="list-our-2">
-              <img
-                class="our-image"
-                src="./images/screen-illustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
-              <h3 class="piont-our">Screen Illustrations</h3>
-              <p class="paragraf-our">Design</p>
-            </li>
-            <li class="list-our-2">
-              <img
-                class="our-image"
-                src="./images/online-courses.jpg"
-                alt="Online Courses"
-                width="360"
-              />
-              <h3 class="piont-our">Online Courses</h3>
-              <p class="paragraf-our">Marketing</p>
-            </li>
-          </ul>
+        <section class="section-our-3">
+          <div class="container">
+            <h2 class="name-section" class="name-section-our">Our Portfolio</h2>
+            <ul class="list-section-our-3">
+              <li class="list-our-1" class="list-our-1-list">
+                <div class="container-section-3">
+                  <img
+                    class="our-image"
+                    src="./images/banking-app.jpg"
+                    alt="Banking App"
+                    width="360"
+                  />
+                  <h3 class="piont-our">Banking App</h3>
+                  <p class="paragraf-our">App</p>
+                </div>
+              </li>
+              <li class="list-our-1">
+                <div class="container-section-3">
+                  <img
+                    class="our-image"
+                    src="./images/cashless-payment.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+                  <h3 class="piont-our">Cashless Payment</h3>
+                  <p class="paragraf-our">Marketing</p>
+                </div>
+              </li>
+              <li class="list-our-1">
+                <div class="container-section-3">
+                  <img
+                    class="our-image"
+                    src="./images/meditation-app.jpg"
+                    alt="Meditation App"
+                    width="360"
+                  />
+                  <h3 class="piont-our">Meditation App</h3>
+                  <p class="paragraf-our">App</p>
+                </div>
+              </li>
+              <li class="list-our-2">
+                <div class="container-section-3">
+                  <img
+                    class="our-image"
+                    src="./images/taxi-service.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                  />
+                  <h3 class="piont-our">Taxi Service</h3>
+                  <p class="paragraf-our">Marketing</p>
+                </div>
+              </li>
+              <li class="list-our-2">
+                <div class="container-section-3">
+                  <img
+                    class="our-image"
+                    src="./images/screen-illustrations.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                  />
+                  <h3 class="piont-our">Screen Illustrations</h3>
+                  <p class="paragraf-our">Design</p>
+                </div>
+              </li>
+              <li class="list-our-2">
+                <div class="container-section-3">
+                  <img
+                    class="our-image"
+                    src="./images/online-courses.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
+                  <h3 class="piont-our">Online Courses</h3>
+                  <p class="paragraf-our">Marketing</p>
+                </div>
+              </li>
+            </ul>
+          </div>
         </section>
       </main>
       <footer class="footer">
-        <a href="./index.html" class="logo"
+        <div class="container">
+<a href="./index.html" class="logo" class="logo-footer-link"
           >Web<span class="studio">Studio</span></a
         >
-        <p class="footer-paragraf">
+        <p class="footer-paragraf"  class="footer-paragraf-p">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+        </div>
+        
       </footer>
     </div>
   </body>
