--- a/index.html
+++ b/index.html
@@ -22,13 +22,20 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
+      integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Document</title>
   </head>
   <body>
     <div class="container">
-      <header>
-        <div class="container" class="container-header-1">
+      <header class="header-nav">
+        <div class="container" class="container-header-nav">
           <nav class="nav-header">
             <a href="./index.html" class="logo"
               >Web<span class="logo-text-2">Studio</span></a
@@ -72,7 +79,7 @@
           <div class="container">
             <h2 class="section-name">Section 2</h2>
             <ul class="list-section-no-name">
-              <li class="list-section-piont">
+              <li class="list-section-point">
                 <h3 class="point-list">Strategy</h3>
                 <p class="paragraf-list">
                   Our goal is to identify the business problem to walk away with
@@ -86,14 +93,14 @@
                   price within the shortest possible time.
                 </p>
               </li>
-              <li class="list-section-piont">
+              <li class="list-section-point">
                 <h3 class="point-list">Diligence</h3>
                 <p class="paragraf-list">
                   Research and confirm brands that present the strongest digital
                   growth opportunities and minimize risk.
                 </p>
               </li>
-              <li class="list-section-piont" class="list-section-2">
+              <li class="list-section-point" class="list-section-2">
                 <h3 class="point-list">Technologies</h3>
                 <p class="paragraf-list">
                   Design practice focused on digital experiences. We bring forth
@@ -150,12 +157,12 @@
             </ul>
           </div>
         </section>
-        <section class="section-our-3">
+        <section class="section-our-three">
           <div class="container">
             <h2 class="name-section" class="name-section-our">Our Portfolio</h2>
             <ul class="list-section-our-3">
-              <li class="list-our-1" class="list-our-1-list">
-                <div class="container-section-3">
+              <li class="list-our-1" class="list-our-one-list">
+                <div class="container-section-three">
                   <img
                     class="our-image"
                     src="./images/banking-app.jpg"
@@ -167,7 +174,7 @@
                 </div>
               </li>
               <li class="list-our-1">
-                <div class="container-section-3">
+                <div class="container-section-three">
                   <img
                     class="our-image"
                     src="./images/cashless-payment.jpg"
@@ -179,7 +186,7 @@
                 </div>
               </li>
               <li class="list-our-1">
-                <div class="container-section-3">
+                <div class="container-section-three">
                   <img
                     class="our-image"
                     src="./images/meditation-app.jpg"
@@ -191,7 +198,7 @@
                 </div>
               </li>
               <li class="list-our-2">
-                <div class="container-section-3">
+                <div class="container-section-three">
                   <img
                     class="our-image"
                     src="./images/taxi-service.jpg"
@@ -200,10 +207,11 @@
                   />
                   <h3 class="piont-our">Taxi Service</h3>
                   <p class="paragraf-our">Marketing</p>
+                  s
                 </div>
               </li>
               <li class="list-our-2">
-                <div class="container-section-3">
+                <div class="container-section-three">
                   <img
                     class="our-image"
                     src="./images/screen-illustrations.jpg"
@@ -215,7 +223,7 @@
                 </div>
               </li>
               <li class="list-our-2">
-                <div class="container-section-3">
+                <div class="container-section-three">
                   <img
                     class="our-image"
                     src="./images/online-courses.jpg"
@@ -232,15 +240,14 @@
       </main>
       <footer class="footer">
         <div class="container">
-<a href="./index.html" class="logo" class="logo-footer-link"
-          >Web<span class="studio">Studio</span></a
-        >
-        <p class="footer-paragraf"  class="footer-paragraf-p">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+          <a href="./index.html" class="logo" class="logo-footer-link"
+            >Web<span class="studio">Studio</span></a
+          >
+          <p class="footer-paragraf" class="footer-paragraf-p">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
         </div>
-        
       </footer>
     </div>
   </body>
