--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </section>
         <section class="section-no-name">
           <div class="container">
-            <h2 class="section-name">Section 2</h2>
+            <h2 class="visually-hidden">Section 2</h2>
             <ul class="list-section-no-name">
               <li class="list-section-point">
                 <h3 class="point-list">Strategy</h3>
@@ -160,8 +160,8 @@
         <section class="section-our-three">
           <div class="container">
             <h2 class="name-section" class="name-section-our">Our Portfolio</h2>
-            <ul class="list-section-our-3">
-              <li class="list-our-1" class="list-our-one-list">
+            <ul class="list-section-our-three">
+              <li class="list-our-one" class="list-our-one-list">
                 <div class="container-section-three">
                   <img
                     class="our-image"
@@ -173,7 +173,7 @@
                   <p class="paragraf-our">App</p>
                 </div>
               </li>
-              <li class="list-our-1">
+              <li class="list-our-one">
                 <div class="container-section-three">
                   <img
                     class="our-image"
@@ -185,7 +185,7 @@
                   <p class="paragraf-our">Marketing</p>
                 </div>
               </li>
-              <li class="list-our-1">
+              <li class="list-our-one">
                 <div class="container-section-three">
                   <img
                     class="our-image"
