--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
-      integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ=="
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
@@ -169,7 +169,7 @@
                     alt="Banking App"
                     width="360"
                   />
-                  <h3 class="piont-our">Banking App</h3>
+                  <h3 class="point-our">Banking App</h3>
                   <p class="paragraf-our">App</p>
                 </div>
               </li>
@@ -181,7 +181,7 @@
                     alt="Cashless Payment"
                     width="360"
                   />
-                  <h3 class="piont-our">Cashless Payment</h3>
+                  <h3 class="point-our">Cashless Payment</h3>
                   <p class="paragraf-our">Marketing</p>
                 </div>
               </li>
@@ -193,7 +193,7 @@
                     alt="Meditation App"
                     width="360"
                   />
-                  <h3 class="piont-our">Meditation App</h3>
+                  <h3 class="point-our">Meditation App</h3>
                   <p class="paragraf-our">App</p>
                 </div>
               </li>
@@ -205,7 +205,7 @@
                     alt="Taxi Service"
                     width="360"
                   />
-                  <h3 class="piont-our">Taxi Service</h3>
+                  <h3 class="point-our">Taxi Service</h3>
                   <p class="paragraf-our">Marketing</p>
                   s
                 </div>
@@ -218,7 +218,7 @@
                     alt="Screen Illustrations"
                     width="360"
                   />
-                  <h3 class="piont-our">Screen Illustrations</h3>
+                  <h3 class="point-our">Screen Illustrations</h3>
                   <p class="paragraf-our">Design</p>
                 </div>
               </li>
@@ -230,7 +230,7 @@
                     alt="Online Courses"
                     width="360"
                   />
-                  <h3 class="piont-our">Online Courses</h3>
+                  <h3 class="point-our">Online Courses</h3>
                   <p class="paragraf-our">Marketing</p>
                 </div>
               </li>
