--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                   <p class="paragraf-our">App</p>
                 </div>
               </li>
-              <li class="list-our-one">
+              <li class="list-our-one" class="list-our-one-list">
                 <div class="container-section-three">
                   <img
                     class="our-image"
@@ -180,7 +180,7 @@
                   <p class="paragraf-our">Marketing</p>
                 </div>
               </li>
-              <li class="list-our-one">
+              <li class="list-our-one" class="list-our-one-list">
                 <div class="container-section-three">
                   <img
                     class="our-image"
@@ -192,7 +192,7 @@
                   <p class="paragraf-our">App</p>
                 </div>
               </li>
-              <li class="list-our-2">
+              <li class="list-our-2" class="list-our-one-list">
                 <div class="container-section-three">
                   <img
                     class="our-image"
@@ -205,7 +205,7 @@
                   s
                 </div>
               </li>
-              <li class="list-our-2">
+              <li class="list-our-2" class="list-our-one-list">
                 <div class="container-section-three">
                   <img
                     class="our-image"
@@ -217,7 +217,7 @@
                   <p class="paragraf-our">Design</p>
                 </div>
               </li>
-              <li class="list-our-2">
+              <li class="list-our-2" class="list-our-one-list">
                 <div class="container-section-three">
                   <img
                     class="our-image"
